# ROS-Repository-Template

./: .env  .gitignore  .gitmodules  README.md  docker-compose.yml
.github/workflows/: CI.yml
docker/build-context/home-folder-config/: fixuid-config.yml
docker/humble/: Dockerfile
docker/jazzy/: Dockerfile
docker/latest/: Dockerfile
docker/noetic/: Dockerfile
scripts/: build.sh  kill.sh  kill_all_container.sh  launch.sh  pull.sh  push.sh  run.sh  run_container.sh  variables.sh
src/new_package/: CMakeLists.txt  package.xml  setup.py
src/new_package/action/: new_action.action
src/new_package/cmake/: FindGflags.cmake  FindGlog.cmake
src/new_package/config/: default.yaml
src/new_package/include/new_package/: NewPackageLibrary.hpp  visibility_control.h
src/new_package/launch/: c++_node.launch  c++_node.py  python_node.launch  python_node.py
src/new_package/msg/: new_msg.msg
src/new_package/new_package/: new_package_library.py
src/new_package/scripts/: new_package_node.py
src/new_package/src/: NewPackageLibrary.cpp  new_package_node.cpp
src/new_package/src/new_package/: new_package_library.py
